# SimTissue

./: README.md  conf.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
docs/: conf.py  requirements.txt
docs/source/: api.rst  conf.py  index.rst  tutorial.rst
docs/source/api/: arbitrary_shape.rst  control_expression.rst  index.rst  tissue.rst
docs/source/tutorial/: checkerboard_shape.ipynb  tissue_simulation.ipynb
docs/source/tutorial/.ipynb_checkpoints/: checkerboard_shape-checkpoint.ipynb  tissue_simulation-checkpoint.ipynb
src/SimTissue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/simtissue/: __init__.py  arbitrary_shape.py  control_expression.py  draft_check_dataset.py  draft_regnerate_dataset.py  plot.py  tissue.py  utils.py
src/simtissue.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tutorial/: L-shape.ipynb  checkerboard_shape.ipynb  ff  r  r.npy  tissue_simulation.ipynb
tutorial/.ipynb_checkpoints/: L-shape-checkpoint.ipynb
